# copier-setuptools

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml  tox.ini
templates/python/: .gitignore  .pre-commit-config.yaml  .shellcheckrc  README.md.jinja  pyproject.toml.jinja  tox.ini  {{_copier_conf.answers_file}}.jinja
templates/python/src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja  cli.py.jinja  exceptions.py.jinja  main.py
templates/python/tests/: conftest.py  test_000.py
tests/: conftest.py  test_tmpl.py
