[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=6.2",
]

[project]
name = "xsc27.copier_template"
description = "Not a real package."
keywords = [
  "copier",
  "copier-template",
  "digitalroots",
]
license = {text = "Apache Software License 2.0"}
authors = [{name = "Carlos Meza", email = "hire@carlosmeza.com"}]
requires-python = ">=3.8"
dependencies = [
  "copier~=7.0",
]
dynamic = [
  "readme",
  "version",
]
classifiers = [
    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12",
]
[project.optional-dependencies]
docs = [
  "mdx-truly-sane-lists",
  "mkdocs-exclude",
  "mkdocs-gen-files",
  "mkdocs-jupyter",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-minify-plugin",
  "mkdocs-redirects!=1.0.4",
  "mkdocs-section-index",
  "mkdocstrings-python",
  "notebook", # required to execute Jupyter Notebooks
]
lint = [
  "bandit[toml]",
  "dlint",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-debugger",
  "flake8-docstrings",
  "flake8-eradicate",
  "flake8-pytest-style",
  "flake8-rst-docstrings",
  "flake8-simplify",
  "pep8-naming",
  "pylint>=2.15", # Support for py3.11+
]
test = [
  "pre-commit~=2.21",
  "pytest~=7.2",
  "tox~=4.3",
]

[project.urls]
"Changelog" = "https://github.com/xsc27/copier-setuptools/blob/trunk/CHANGELOG.md"
"Homepage" = "https://github.com/xsc27/copier-setuptools"
"Issues" = "https://github.com/xsc27/copier-setuptools/issues"
"Source" = "https://github.com/xsc27/copier-setuptools"


[tool.setuptools]
zip-safe = true
dynamic.readme = {file = ["README.md"], content-type = "text/markdown"}
py-modules = []

[tool.setuptools_scm]

[tool.bandit]
skips = [
    "B404",  # import-subprocess
]
[tool.bandit.assert_used]
skips = ["**/tests/test_*.py"]

[tool.black]
line-length = 98

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if not config.dryrun",
]

[tool.flake8]
# Setting are in tox.ini because
# flake8 does not support pyproject.toml

[tool.isort]
profile = "black"
line_length = 98
known_first_party = "copier_template_test"

[tool.pylint.config]
max-line-length = 98
persistent = "no"
enable = [
    "F",  # Fatal
    "E",  # Error
    "W",  # Warning
    "C",  # Convention
    "I",  # Informational
]
disable = [
    "R",  # Refactor
    "fixme",
    "locally-disabled",
    # "line-too-long",  # redundant from flake8
    # "missing-class-docstring",  # redundant from flake8-docstrings
    # "missing-function-docstring",  # redundant from flake8-docstrings
    # "missing-module-docstring",  # redundant from flake8-docstrings
    "suppressed-message",
    # "undefined-variable",  # redundant from flake8
    # "ungrouped-imports",  # redundant from isort
    # "unused-variable",  # redundant from flake8
    # "method-cache-max-size-none",  # redundant from bugbear
]

[tool.pytest.ini_options]
addopts = "--verbosity=2 --doctest-modules --ignore=docs --showlocals -rfp --strict-markers"
log_cli = false
log_level = "DEBUG"
log_cli_level = "INFO"
log_file_level = "DEBUG"
testpaths = ["tests"]
